# corprep

./: .gitignore  README.md  pyproject.toml  test.ipynb
corprep/vdb/: newscatcher.py  weaviate.py
corprep/weaviate/: newscatcher.py  weaviate.py
data/: Bank of America.json  BoH.json  Citigroup.json  GS.json  Goldman Sachs.json  JPMC.json  JPMorgan Chase.json  WF.json  Wells Fargo.json
